syntax = "proto3";
package coolstore;
option csharp_namespace = "VND.CoolStore.ShoppingCart.DataContracts.Api.V1";

import "cart_dto.proto";

service ShoppingCartApi {
  rpc GetCart(GetCartRequest) returns (GetCartResponse) {};
  rpc GetCartByUserId(GetCartByUserIdRequest) returns (GetCartByUserIdResponse) {};
  rpc InsertItemToNewCart(InsertItemToNewCartRequest) returns (InsertItemToNewCartResponse) {};
  rpc UpdateItemInCart(UpdateItemInCartRequest) returns (UpdateItemInCartResponse) {};
  rpc Checkout(CheckoutRequest) returns (CheckoutResponse) {};
  rpc DeleteItem(DeleteItemRequest) returns (DeleteItemResponse) {};
}

message GetCartRequest {
  string cart_id = 1;
}

message GetCartResponse {
  repeated CartWithProductsRow rows = 1;
}

message GetCartByUserIdRequest {
  string user_id = 1;
}

message GetCartByUserIdResponse {
  CartDto cart = 1;
}

message InsertItemToNewCartRequest {
  string user_id = 1; 
  string product_id = 2;
  int32 quantity = 3;
}

message InsertItemToNewCartResponse {
  CartDto result = 1;
}

message UpdateItemInCartRequest {
  string cart_id = 1;
  string product_id = 2;
  int32 quantity = 3;
}

message UpdateItemInCartResponse {
  CartDto result = 1;
}

message DeleteItemRequest {
  string cart_id = 1;
  string product_id = 2;
}

message DeleteItemResponse {
  string product_id = 1;
}

message CheckoutRequest {
  string cart_id = 1;
}

message CheckoutResponse {
  bool is_succeed = 1;
}
