syntax = "proto3";
package coolstore;
option csharp_namespace = "VND.CoolStore.ShoppingCart.DataContracts.Dto.V1";

message ProductDto {
  string id = 1;
  string name = 2;
  string desc = 3;
  double price = 4;
  string image_path = 5;
  string inventory_id = 6;
  bool is_deleted = 7;
}

message CartDto {
  string id = 1;
  string user_id = 2;
  double cart_item_total = 3;
  double cart_item_promo_savings = 4;
  double shipping_total = 5;
  double shipping_promo_savings = 6;
  double cart_total = 7;
  bool is_check_out = 8;
  repeated CartItemDto items = 9;
}

message CartItemDto {
  int32 quantity = 1;
  double price = 2;
  double promo_savings = 3;
  string product_id = 4;
  string product_name = 5;
  double product_price = 6;
  string product_desc = 7;
  string product_image_path = 8;
  string inventory_id = 9;
  string inventory_location = 10;
  string inventory_description = 11;
  string inventory_website = 12;
}

message CartWithProductsRow {
  double cart_item_total = 1;
  double cart_item_promo_savings = 2;
  double shipping_total = 3;
  double shipping_promo_savings = 4;
  double cart_total = 5;
  bool is_check_out = 6;
  int32 quantity = 7;
  string product_name = 8;
  double product_price = 9;
  string product_desc = 10;
  string product_image_path = 11;
  string cart_id = 12;
  string product_id = 13;
  string inventory_id = 14;
  string inventory_location = 15;
  string inventory_description = 16;
  string inventory_website = 17;
  string user_id = 18;
}
