syntax = "proto3";
package coolstore;
option csharp_namespace = "VND.CoolStore.ProductCatalog.DataContracts.Api.V1";

import "catalog_dto.proto";

service CatalogApi {
  rpc GetProducts(GetProductsRequest) returns (GetProductsResponse) {};
  rpc GetProductById(GetProductByIdRequest) returns (GetProductByIdResponse) {};
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {};
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse) {};
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse) {};
}

message GetProductsRequest {
  int32 current_page = 1;
  double high_price = 2;
}

message GetProductsResponse {
  repeated CatalogProductDto products = 1;
}

message GetProductByIdRequest {
  string product_id = 1;
}

message GetProductByIdResponse {
  CatalogProductDto product = 1;
}

message CreateProductRequest {
  string name = 1;
  string desc = 2;
  double price = 3;
  string image_url = 4;
  string inventory_id = 5;
}

message CreateProductResponse {
  CatalogProductDto product = 1;
}

message UpdateProductRequest {
  string product_id = 1;
  string name = 2;
  string desc = 3;
  double price = 4;
  string image_url = 5;
  string inventory_id = 6;
}

message UpdateProductResponse {
  CatalogProductDto product = 1;
}

message DeleteProductRequest {
  string product_id = 1;
}

message DeleteProductResponse {
  CatalogProductDto product = 1;
}
