syntax = "proto3";
package coolstore;
option csharp_namespace = "VND.CoolStore.ProductCatalog.DataContracts.Dto.V1";

message CatalogProductDto {
  string id = 1;
  string name = 2;
  string desc = 3;
  double price = 4;
  string image_url = 5;
  string inventory_id = 6;
  string inventory_location = 7;
  string inventory_website = 8;
  string inventory_description = 9;
  string category_id = 10;
  string category_name = 11;
}
